--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,13 +1,26 @@
-Django>=5.2,<6.0
-djangorestframework>=3.14,<4.0
-gunicorn>=21.2
-psycopg2-binary>=2.9
-dj-database-url>=1.0
-whitenoise>=6.6
-django-cors-headers>=4.3
-
-# Optional: if you use token auth (DRF built-in)
-djangorestframework-simplejwt>=5.3
-
-# Optional: for image uploads or file validation
-Pillow>=10.3
+asgiref==3.9.1
+certifi==2025.7.14
+charset-normalizer==3.4.2
+django==5.2.4
+django-cors-headers==4.7.0
+djangorestframework==3.16.0
+filelock==3.18.0
+fsspec==2025.7.0
+gunicorn==21.2.0
+idna==3.10
+jinja2==3.1.6
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.5
+numpy==2.3.1
+Pillow==11.3.0
+psycopg2-binary==2.9.10
+requests==2.32.4
+sqlparse==0.5.3
+sympy==1.14.0
+torch==2.7.1
+torchvision==0.22.1
+tzdata==2025.2
+urllib3==2.5.0
+whitenoise==6.6.0
+dj-database-url==2.1.0
