--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ sqlparse==0.5.3
 sympy==1.14.0
 torch==2.7.1
 torchvision==0.22.1
+python-dotenv==1.0.1
 tzdata==2025.2
 urllib3==2.5.0
 whitenoise==6.6.0
